fix(article.scss): add underline for links in contrast-more

--- a/src/styles/article.scss
+++ b/src/styles/article.scss
@@ -38,7 +38,7 @@
   }
 
   a {
-    @apply text-link;
+    @apply text-link contrast-more:underline;
     &:hover {
       @apply text-hover underline;
     }
